--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "classnames": "^2.5.1",
     "expo": "~50.0.14",
+    "expo-sms": "~11.7.1",
     "expo-status-bar": "~1.11.1",
+    "input-otp": "^1.2.4",
+    "lottie-react-native": "^6.5.1",
     "moti": "^0.28.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
