--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -34,6 +34,7 @@
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^0.10.0",
+    "react-native-vision-camera": "^3.9.2",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
